Fix required edition in hidden fields

--- a/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/custom_views/wizard/steps/step2.html
@@ -158,7 +158,7 @@
                           <td x-text="getfieldValueText(field)" x-show="canShowFieldColumn('value_text')"></td>
                           <!-- Required in form -->
                           <td x-show="canShowFieldColumn('required_in_form')">
-                            <div class="form-switch">
+                            <div class="form-switch" x-show="field.type_in_form != 'hidden'">
                               <input class="form-check-input form-switch" type="checkbox" role="switch" x-model="field.required_in_form" 
                                      :id="`dataBlockFieldReqForm-${item.id}-${field.name}`"/>
                             </div>
